Working through the prealloc for dacapo