@@ -1,7 +1,7 @@
 #!/bin/bash
 DACAPO_DIR=dacapo
 PHOSPHOR_JAR=`pwd`/target/Phosphor-0.0.2-SNAPSHOT.jar
-BENCHMARKS=(avrora batik eclipse fop h2 jython luindex lusearch pmd sunflow tomcat xalan) #tradebeans tradesoap are disabled in this script because of the PITA with distributing the openjdk jce.jar file with everything, then switching it in...
+BENCHMARKS=(avrora batik eclipse fop h2 jython luindex lusearch pmd sunflow tomcat tradebeans tradesoap xalan) #tradebeans tradesoap are disabled in this script because of the PITA with distributing the openjdk jce.jar file with everything, then switching it in...
 #if you want to run them, copy the jce.jar file from an openjdk distribution of the same version into your hotspot jvm that you are going to instrument before instrumenting it.
 # (export controls are annoying)
 
@@ -43,15 +43,15 @@ fi
 echo "Trying int tag benchmarks. Note: these numbers will not be super accurate from travis!";
 for bm in "${BENCHMARKS[@]}"
 do
-echo "$JAVA_HOME/bin/java -cp $DACAPO_DIR Harness $bm"
-$JAVA_HOME/bin/java -cp $DACAPO_DIR Harness $bm
-echo "target/jre-inst-int/bin/java -Xbootclasspath/p:$PHOSPHOR_JAR -javaagent:$PHOSPHOR_JAR -cp target/dacapo-inst-int/ -Declipse.java.home=$JAVA_HOME/jre/ Harness $bm"
-target/jre-inst-int/bin/java -Xbootclasspath/p:$PHOSPHOR_JAR -javaagent:$PHOSPHOR_JAR -cp target/dacapo-inst-int/ -Declipse.java.home=$JAVA_HOME/jre/ Harness $bm
-echo "target/jre-inst-obj/bin/java -Xbootclasspath/p:$PHOSPHOR_JAR -javaagent:$PHOSPHOR_JAR -cp target/dacapo-inst-obj/ -Declipse.java.home=$JAVA_HOME/jre/ Harness $bm"
-target/jre-inst-obj/bin/java -Xbootclasspath/p:$PHOSPHOR_JAR -javaagent:$PHOSPHOR_JAR -cp target/dacapo-inst-obj/ -Declipse.java.home=$JAVA_HOME/jre/ Harness $bm
+echo "$JAVA_HOME/bin/java -Xmx8g -XX:MaxPermSize=1g -cp $DACAPO_DIR Harness $bm"
+$JAVA_HOME/bin/java -Xmx8g -XX:MaxPermSize=1g -cp $DACAPO_DIR Harness $bm
+echo "target/jre-inst-int/bin/java -Xmx8g -XX:MaxPermSize=1g -Xbootclasspath/p:$PHOSPHOR_JAR -javaagent:$PHOSPHOR_JAR -cp target/dacapo-inst-int/ -Declipse.java.home=$JAVA_HOME/jre/ Harness $bm"
+target/jre-inst-int/bin/java -Xmx8g -XX:MaxPermSize=1g -Xbootclasspath/p:$PHOSPHOR_JAR -javaagent:$PHOSPHOR_JAR -cp target/dacapo-inst-int/ -Declipse.java.home=$JAVA_HOME/jre/ Harness $bm
+echo "target/jre-inst-obj/bin/java -Xmx8g -XX:MaxPermSize=1g -Xbootclasspath/p:$PHOSPHOR_JAR -javaagent:$PHOSPHOR_JAR -cp target/dacapo-inst-obj/ -Declipse.java.home=$JAVA_HOME/jre/ Harness $bm"
+target/jre-inst-obj/bin/java -Xmx8g -XX:MaxPermSize=1g -Xbootclasspath/p:$PHOSPHOR_JAR -javaagent:$PHOSPHOR_JAR -cp target/dacapo-inst-obj/ -Declipse.java.home=$JAVA_HOME/jre/ Harness $bm
 
-echo "target/jre-inst-obj-singlearray/bin/java -Xbootclasspath/p:$PHOSPHOR_JAR -javaagent:$PHOSPHOR_JAR -cp target/dacapo-inst-obj-singlearraytag/ -Declipse.java.home=$JAVA_HOME/jre/ Harness $bm"
-target/jre-inst-obj-singlearray/bin/java -Xbootclasspath/p:$PHOSPHOR_JAR -javaagent:$PHOSPHOR_JAR=singlearraytag -cp target/dacapo-inst-obj-singlearraytag/ -Declipse.java.home=$JAVA_HOME/jre/ Harness $bm
+echo "target/jre-inst-obj-singlearray/bin/java -Xmx8g -XX:MaxPermSize=1g -Xbootclasspath/p:$PHOSPHOR_JAR -javaagent:$PHOSPHOR_JAR -cp target/dacapo-inst-obj-singlearraytag/ -Declipse.java.home=$JAVA_HOME/jre/ Harness $bm"
+target/jre-inst-obj-singlearray/bin/java -Xmx8g -XX:MaxPermSize=1g -Xbootclasspath/p:$PHOSPHOR_JAR -javaagent:$PHOSPHOR_JAR=singlearraytag -cp target/dacapo-inst-obj-singlearraytag/ -Declipse.java.home=$JAVA_HOME/jre/ Harness $bm
 if [ $? -ne 0 ]; then
 HAD_ERROR=`expr $HAD_ERROR + 1`
 fi
